# EqBen

./: README.md  evaluate_eqben_locally.py  pyproject.toml
EqSim/: README.md
EqSim/FIBER/: README.md
EqSim/FIBER/coarse_grained/: azure_distributed_run.py  azure_distributed_run_mpi.py  command.txt  eval_batch_my.py  run.py
EqSim/FIBER/coarse_grained/fiber/: config.py
EqSim/FIBER/coarse_grained/fiber/datasets/: base_dataset.py  coco_caption_karpathy_dataset.py  conceptual_caption_dataset.py
EqSim/FIBER/coarse_grained/fiber/modules/: fiber_module.py  fiber_utils.py  objectives.py
EqSim/FIBER/coarse_grained/toolkit/: change_model_name.py
example/: eqben_eval_CLIP.py  eqben_eval_FIBER.py  eqben_eval_template.py
src/eqben/: eqben_acc.py  eqben_logger.py  eqben_utils.py
src_file/: prediction.npy
